--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,22 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_sign_up"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="@font/poppins"
-            android:text="@string/tv_sign_up"
-            android:textAlignment="center"
-            android:textColor="@color/primary_dark"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
@@ -34,9 +18,10 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/poppins_semibold"
+            android:padding="10dp"
             android:text="@string/btn_login"
             android:textAllCaps="false"
-            app:layout_constraintBottom_toTopOf="@id/tv_sign_up"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
