--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.auth.FragmentRegister">
+    tools:context=".ui.fragment.auth.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -138,6 +138,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/poppins_semibold"
+            android:padding="10dp"
             android:text="@string/btn_sign_up"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
